# hecr

./: .gitignore  CMakeLists.txt
cilk/: CMakeLists.txt  Solver.cpp  algorithms.cpp  main.cpp  solver.cpp  solver.hpp
common/: algorithms.cpp  algorithms.hpp  main.cpp  tests.cpp
omp/: CMakeLists.txt  reductionOmp.cpp  solver.cpp  solver.hpp
seq/: .gitignore  CMakeLists.txt  Solver.cpp  Solver.h  algorithms.cpp  algorithms.hpp  main.cpp  solver.cpp  solver.hpp  tests.cpp
tbb/: CMakeLists.txt  reductionTBB.cpp  solver.cpp  solver.hpp  tbb.cpp  tbb.hpp
