set(VARIANT_SRC ${CMAKE_CURRENT_SOURCE_DIR}/solver.cpp
                ${CMAKE_CURRENT_SOURCE_DIR}/tbb.cpp PARENT_SCOPE)

set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/3rdparty/cmake)
find_package(TBB)

set(VARIANT_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR} ${TBB_INCLUDE_DIRS}
    PARENT_SCOPE)
set(VARIANT_COMPILE_OPTIONS ${TBB_DEFINITIONS} PARENT_SCOPE)
set(VARIANT_LIBS ${TBB_LIBRARIES} PARENT_SCOPE)

